[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/BoutonMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu/BtnMenu.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Menu/bateauechelemenu.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu/ciel01.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menu/vague1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menu/vague2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menu/vague3.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/Titre/titrejeu5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu/nuage4.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menu/nuage1.png" type="Texture" id=10]
[ext_resource path="res://Scripts/ConfigGame.gd" type="Script" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Boucle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1.8025 ),
"update": 0,
"values": [ 0.0, 2.0, -2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -105, 639.987 ), Vector2( -50, 639.987 ), Vector2( -150, 639.987 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Boucle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -105, 639.987 ), Vector2( -50, 639.987 ) ]
}

[sub_resource type="Animation" id=3]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 5 ),
"transitions": PoolRealArray( 0.420448, 1 ),
"update": 0,
"values": [ Vector2( -450, 700 ), Vector2( 950, 700 ) ]
}

[sub_resource type="Animation" id=4]

[sub_resource type="Animation" id=5]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 0.965936, 1.07177 ),
"update": 0,
"values": [ 3.0, -3.0 ]
}

[sub_resource type="Animation" id=6]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 30 ) ]
}

[sub_resource type="Animation" id=7]
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.1, 4.6 ),
"transitions": PoolRealArray( 1, 1, 0.999999 ),
"update": 0,
"values": [ 0.0, 0.7, -0.7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.1, 4.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -150, 610 ), Vector2( -50, 610 ), Vector2( -150, 610 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.886
margin_top = -17.0
margin_right = 26.114
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nuage1" type="Sprite" parent="."]
position = Vector2( 1800, 94 )
scale = Vector2( 0.576172, 0.576172 )
texture = ExtResource( 10 )

[node name="nuage2" type="Sprite" parent="."]
position = Vector2( 360, 392 )
texture = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 504.0
margin_right = 1416.0
margin_bottom = 349.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_left = 256.0
margin_right = 656.0
margin_bottom = 273.0
size_flags_horizontal = 4
texture = ExtResource( 8 )

[node name="Menu" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 277.0
margin_right = 912.0
margin_bottom = 349.0
size_flags_vertical = 3
custom_constants/separation = 200

[node name="Jouer" type="Button" parent="MarginContainer/VBoxContainer/Menu"]
margin_right = 148.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Jouer"
script = ExtResource( 1 )

[node name="Option" type="Button" parent="MarginContainer/VBoxContainer/Menu"]
margin_left = 348.0
margin_right = 539.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Options"
script = ExtResource( 1 )

[node name="Quitter" type="Button" parent="MarginContainer/VBoxContainer/Menu"]
margin_left = 739.0
margin_right = 912.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Quitter"
script = ExtResource( 1 )

[node name="Vague3" type="NinePatchRect" parent="."]
margin_left = -105.0
margin_top = 639.987
margin_right = 2012.0
margin_bottom = 1182.99
texture = ExtResource( 7 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Vague3"]
autoplay = "Boucle"
anims/Boucle = SubResource( 1 )

[node name="Vague2" type="NinePatchRect" parent="."]
margin_left = -105.0
margin_top = 639.987
margin_right = 2013.0
margin_bottom = 1063.99
rect_pivot_offset = Vector2( 1059, 212 )
texture = ExtResource( 6 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Vague2"]
autoplay = "Boucle"
anims/Boucle = SubResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -450, 700 )

[node name="Bateau" type="Sprite" parent="Node2D"]
rotation = 0.0523599
scale = Vector2( 0.402136, 0.402137 )
texture = ExtResource( 3 )

[node name="Node2D" type="AnimationPlayer" parent="Node2D/Bateau"]
anims/Apparition = SubResource( 3 )
anims/Depart = SubResource( 4 )

[node name="BateauRotation" type="AnimationPlayer" parent="Node2D/Bateau"]
anims/Boucle = SubResource( 5 )

[node name="BateauY" type="AnimationPlayer" parent="Node2D/Bateau"]
anims/Boucle = SubResource( 6 )

[node name="Vague1" type="NinePatchRect" parent="."]
margin_left = -128.0
margin_top = 576.0
margin_right = 1988.46
margin_bottom = 1119.0
rect_pivot_offset = Vector2( 1050, 320 )
texture = ExtResource( 5 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Vague1"]
autoplay = "Boucle"
anims/Boucle = SubResource( 7 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu/Jouer" to="MarginContainer/VBoxContainer/Menu/Jouer" method="_on_Jouer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu/Option" to="MarginContainer/VBoxContainer/Menu/Option" method="_on_Option_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu/Quitter" to="MarginContainer/VBoxContainer/Menu/Quitter" method="_on_Quitter_pressed"]
